documentation added in readme
